[gd_scene load_steps=8 format=3 uid="uid://ctmr0emap1cvq"]

[ext_resource type="Script" path="res://script/interface/interface.gd" id="1_k641j"]
[ext_resource type="PackedScene" uid="uid://daq58p3rwjmi2" path="res://script/interface/common/animated_button/animated_button.tscn" id="2_avq0v"]
[ext_resource type="Texture2D" uid="uid://bj8w4o08xnc6c" path="res://asset/image/interface/button/next_level_button.png" id="3_j3b0g"]
[ext_resource type="PackedScene" path="res://script/interface/button/tip_button.tscn" id="4_dx0rc"]
[ext_resource type="PackedScene" uid="uid://crg8eoljtbi43" path="res://script/interface/bar/attempt/attempt_bar.tscn" id="6_khxwc"]
[ext_resource type="Texture2D" uid="uid://ps040wi1tqos" path="res://asset/image/interface/button/reset_button.png" id="6_uck1h"]
[ext_resource type="Texture2D" uid="uid://dif0r6s2smeri" path="res://asset/image/interface/button/menu_button.png" id="7_qw3pj"]

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_k641j")

[node name="LeftButtons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(50, 100)
layout_mode = 0
offset_left = 30.0
offset_top = 50.0
offset_right = 85.0
offset_bottom = 135.0
theme_override_constants/separation = 10

[node name="SkipButton" parent="LeftButtons" instance=ExtResource("2_avq0v")]
layout_mode = 2
texture_normal = ExtResource("3_j3b0g")

[node name="TipButton" parent="LeftButtons" instance=ExtResource("4_dx0rc")]
layout_mode = 2

[node name="Middle" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 70.0
offset_right = 50.0
offset_bottom = 170.0
grow_horizontal = 2

[node name="AttemptBar" parent="Middle" instance=ExtResource("6_khxwc")]
layout_mode = 2

[node name="RightButtons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(50, 100)
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 50.0
offset_right = -25.0
offset_bottom = 136.0
theme_override_constants/separation = 10

[node name="ResetButton" parent="RightButtons" instance=ExtResource("2_avq0v")]
layout_mode = 2
texture_normal = ExtResource("6_uck1h")

[node name="MenuButton" parent="RightButtons" instance=ExtResource("2_avq0v")]
layout_mode = 2
texture_normal = ExtResource("7_qw3pj")

[connection signal="pressed" from="LeftButtons/SkipButton" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="RightButtons/ResetButton" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="RightButtons/MenuButton" to="." method="_on_menu_pressed"]
